--- a/Web/Views/Administration/AccessDenied.cshtml
+++ b/Web/Views/Administration/AccessDenied.cshtml
@@ -1,9 +1,14 @@
-﻿@{
+﻿﻿@{
     ViewData["Title"] = "AccessDenied";
 }
-
-<div class="text-center">
-    <h1 class="text-danger">Access Denied</h1>
-    <h6 class="text-danger">You do not have Permission to view this resource</h6>
-    <img src="~/Images/AccessDenied.png" style="height:300px; width:300px" />
+<div class="p-4 sm:ml-64">
+    <div class="p-4 border-2 border-gray-200 border rounded-lg dark:border-gray-700">
+        <main class="flex-1 p-10">
+            <div class="text-center">
+                <h1 class="text-danger">Access Denied</h1>
+                <h6 class="text-danger">You do not have Permission to view this resource</h6>
+                <img src="~/Images/AccessDenied.png" style="height:300px; width:300px" />
+            </div>
+        </main>
+    </div>
 </div>
