--- a/Web/Views/Administration/CreateRole.cshtml
+++ b/Web/Views/Administration/CreateRole.cshtml
@@ -3,26 +3,32 @@
 @{
     ViewBag.Title = "Create New Role";
 }
+<div class="p-4 sm:ml-64">
+    <div class="p-4 border-2 border-gray-200 border rounded-lg dark:border-gray-700">
+        <main class="flex-1 p-10">
+            <form asp-action="CreateRole" method="post" class="mt-3">
+                <div asp-validation-summary="All" class="text-danger">
+                </div>
+                <div class="form-group row">
+                    <label asp-for="RoleName" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <input asp-for="RoleName" class="form-control" placeholder="Name">
+                        <span asp-validation-for="RoleName" class="text-danger"></span>
+                    </div>
+                    <label asp-for="Description" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <input asp-for="Description" class="form-control" placeholder="Description">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-10">
+                        <button type="submit" class="btn btn-primary" style="width:auto">
+                            Create Role
+                        </button>
+                    </div>
+                </div>
+            </form>
 
-<form asp-action="CreateRole" method="post" class="mt-3">
-    <div asp-validation-summary="All" class="text-danger">
+        </main>
     </div>
-    <div class="form-group row">
-        <label asp-for="RoleName" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="RoleName" class="form-control" placeholder="Name">
-            <span asp-validation-for="RoleName" class="text-danger"></span>
-        </div>
-        <label asp-for="Description" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="Description" class="form-control" placeholder="Description">
-        </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary" style="width:auto">
-                Create Role
-            </button>
-        </div>
-    </div>
-</form>
+</div>
