--- a/Web/Views/Administration/EditRole.cshtml
+++ b/Web/Views/Administration/EditRole.cshtml
@@ -1,63 +1,66 @@
 ﻿@model Web.Models.Role.EditRoleViewModel
-
 @{
     ViewBag.Title = "Edit Role";
 }
-
 <h1>Edit Role</h1>
+<div class="p-4 sm:ml-64">
+    <div class="p-4 border-2 border-gray-200 border rounded-lg dark:border-gray-700">
+        <main class="flex-1 p-10">
+            <form method="post" class="mt-3">
+                <div class="form-group row">
+                    <input type="hidden" asp-for="Id" />
+                    <label asp-for="Id" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <input asp-for="Id" disabled class="form-control">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="RoleName" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <input asp-for="RoleName" class="form-control">
+                        <span asp-validation-for="RoleName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="Description" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <input asp-for="Description" class="form-control">
+                    </div>
+                </div>
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group row">
+                    <div class="col-sm-10">
+                        <button type="submit" class="btn btn-primary">Update</button>
+                        <a asp-action="ListRoles" class="btn btn-primary">Cancel</a>
+                    </div>
+                </div>
+                <br />
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Users in this role</h3>
+                    </div>
+                    <div class="card-body">
+                        @if (Model.Users != null && Model.Users.Any())
+                        {
+                            foreach (var user in Model.Users)
+                            {
+                                <h5 class="card-title">@user</h5>
+                            }
+                        }
+                        else
+                        {
+                            <h5 class="card-title">None at the moment</h5>
+                        }
+                    </div>
 
-<form method="post" class="mt-3">
-    <div class="form-group row">
-        <input type="hidden" asp-for="Id" />
-        <label asp-for="Id" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="Id" disabled class="form-control">
-        </div>
+                    <div class="card-footer">
+                        <a asp-controller="Administration" asp-action="EditUsersInRole"
+                           asp-route-roleId="@Model.Id" class="btn btn-primary">
+                            Add or Remove Users From This Role
+                        </a>
+                    </div>
+                </div>
+            </form>
+        </main>
     </div>
-    <div class="form-group row">
-        <label asp-for="RoleName" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="RoleName" class="form-control">
-            <span asp-validation-for="RoleName" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label asp-for="Description" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="Description" class="form-control">
-        </div>
-    </div>
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group row">
-        <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary">Update</button>
-            <a asp-action="ListRoles" class="btn btn-primary">Cancel</a>
-        </div>
-    </div>
-    <br />
-    <div class="card">
-        <div class="card-header">
-            <h3>Users in this role</h3>
-        </div>
-        <div class="card-body">
-            @if (Model.Users != null && Model.Users.Any())
-            {
-                foreach (var user in Model.Users)
-                {
-                    <h5 class="card-title">@user</h5>
-                }
-            }
-            else
-            {
-                <h5 class="card-title">None at the moment</h5>
-            }
-        </div>
-
-        <div class="card-footer">
-            <a asp-controller="Administration" asp-action="EditUsersInRole"
-               asp-route-roleId="@Model.Id" class="btn btn-primary">
-                Add or Remove Users From This Role
-            </a>
-        </div>
-    </div>
-</form>
+</div>
