--- a/Web/Views/Administration/EditUsersInRole.cshtml
+++ b/Web/Views/Administration/EditUsersInRole.cshtml
@@ -1,36 +1,40 @@
 ﻿@model List<Web.Models.Role.UserRoleViewModel>
-
 @{
     var roleId = ViewBag.roleId;
 }
+<div class="p-4 sm:ml-64">
+    <div class="p-4 border-2 border-gray-200 border rounded-lg dark:border-gray-700">
+        <main class="flex-1 p-10">
+            <form method="post">
+                <div class="card">
 
-<form method="post">
-    <div class="card">
-
-        <div class="card-header">
-            <h3>Role: @ViewBag.RollName </h3>
-        </div>
-        <div class="card-header">
-            <h4>Add or Remove Users From This Role</h4>
-        </div>
-        <div class="card-body">
-            @for (int i = 0; i < Model.Count; i++)
-            {
-                <div class="form-check m-1">
-                    <input type="hidden" asp-for="@Model[i].UserId" />
-                    <input type="hidden" asp-for="@Model[i].UserName" />
-                    <input asp-for="@Model[i].IsSelected" class="form-check-input" />
-                    <label class="form-check-label" asp-for="@Model[i].IsSelected">
-                        @Model[i].UserName
-                    </label>
+                    <div class="card-header">
+                        <h3>Role: @ViewBag.RollName </h3>
+                    </div>
+                    <div class="card-header">
+                        <h4>Add or Remove Users From This Role</h4>
+                    </div>
+                    <div class="card-body">
+                        @for (int i = 0; i < Model.Count; i++)
+                        {
+                            <div class="form-check m-1">
+                                <input type="hidden" asp-for="@Model[i].UserId" />
+                                <input type="hidden" asp-for="@Model[i].UserName" />
+                                <input asp-for="@Model[i].IsSelected" class="form-check-input" />
+                                <label class="form-check-label" asp-for="@Model[i].IsSelected">
+                                    @Model[i].UserName
+                                </label>
+                            </div>
+                        }
+                    </div>
+                    <div class="card-footer">
+                        <input type="submit" value="Update" class="btn btn-primary"
+                               style="width:auto" />
+                        <a asp-action="EditRole" asp-route-roleId="@roleId"
+                           class="btn btn-primary" style="width:auto">Cancel</a>
+                    </div>
                 </div>
-            }
-        </div>
-        <div class="card-footer">
-            <input type="submit" value="Update" class="btn btn-primary"
-                   style="width:auto" />
-            <a asp-action="EditRole" asp-route-roleId="@roleId"
-               class="btn btn-primary" style="width:auto">Cancel</a>
-        </div>
+            </form>
+        </main>
     </div>
-</form>
+</div>
