--- a/Web/Views/Administration/ListUsers.cshtml
+++ b/Web/Views/Administration/ListUsers.cshtml
@@ -1,4 +1,4 @@
-﻿@using Application.Entities
+﻿﻿@using Application.Entities
 @model IEnumerable<User>
 
 @{
@@ -6,49 +6,56 @@
 }
 
 <h1>All Users</h1>
-
-@if (Model.Any())
-{
-    <a asp-action="Register" asp-controller="Account"
-       class="btn btn-primary mb-3" style="width:auto">
-        Add New User
-    </a>
-    foreach (var user in Model)
-    {
-        <div class="card mb-3">
-            <div class="card-header">
-                User Id : @user.Id
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">@user.UserName</h5>
-            </div>
-            <div class="card-footer">
-                <form method="post" asp-action="DeleteUser" asp-route-UserId="@user.Id">
-                    <a asp-controller="Administration" asp-action="Edituser"
-                       asp-route-UserId="@user.Id" class="btn btn-primary">Edit</a>
-                    <span id="confirmDeleteSpan_@user.Id" style="display:none">
-                        <span>Are you sure you want to Delete?</span>
-                        <button type="submit" class="btn btn-danger">Yes</button>
-                        <a href="#" class="btn btn-primary"
-                           onclick="confirmDelete('@user.Id', false)">No</a>
-                    </span>
-                    <span id="deleteSpan_@user.Id">
-                        <a href="#" class="btn btn-danger"
-                           onclick="confirmDelete('@user.Id', true)">Delete</a>
-                    </span>
-                </form>
-            </div>
-        </div>
-    }
-}
-else
-{
-    <div class="card">
-        <div class="card-header">
-            No Users Added Yet
-        </div>
+<div class="p-4 sm:ml-64">
+    <div class="p-4 border-2 border-gray-200 border rounded-lg dark:border-gray-700">
+        <main class="flex-1 p-10">
+            @if (Model.Any())
+            {
+                <a asp-action="Register" asp-controller="Account"
+                   class="btn btn-primary mb-3" style="width:auto">
+                    Add New User
+                </a>
+                foreach (var user in Model)
+                {
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            User Id : @user.Id
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">@user.UserName</h5>
+                        </div>
+                        <div class="card-footer">
+                            <form method="post" asp-action="DeleteUser" asp-route-UserId="@user.Id">
+                                <a asp-controller="Administration" asp-action="Edituser"
+                                   asp-route-UserId="@user.Id" class="btn btn-primary">Edit</a>
+                                <span id="confirmDeleteSpan_@user.Id" style="display:none">
+                                    <span>Are you sure you want to Delete?</span>
+                                    <button type="submit" class="btn btn-danger">Yes</button>
+                                    <a href="#" class="btn btn-primary"
+                                       onclick="confirmDelete('@user.Id', false)">No</a>
+                                </span>
+                                <span id="deleteSpan_@user.Id">
+                                    <a href="#" class="btn btn-danger"
+                                       onclick="confirmDelete('@user.Id', true)">Delete</a>
+                                </span>
+                            </form>
+                        </div>
+                    </div>
+                }
+            }
+            else
+            {
+                <div class="card">
+                    <div class="card-header">
+                        No Users Added Yet
+                    </div>
+                </div>
+            }
+        </main>
     </div>
-}
+</div>
+
+
 <script>
     function confirmDelete(uniqueId, isDeleteClicked) {
         var deleteSpan = 'deleteSpan_' + uniqueId;
