--- a/Web/Views/Administration/ManageUserRoles.cshtml
+++ b/Web/Views/Administration/ManageUserRoles.cshtml
@@ -1,37 +1,41 @@
 ﻿@model List<Web.Models.User.UserRolesViewModel>
-
 @{
     var UserId = ViewBag.UserId;
 }
+<div class="p-4 sm:ml-64">
+    <div class="p-4 border-2 border-gray-200 border rounded-lg dark:border-gray-700">
+        <main class="flex-1 p-10">
+            <form method="post">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>User: @ViewBag.UserName </h3>
+                    </div>
+                    <div class="card-header">
+                        <h4>Manage Roles</h4>
+                    </div>
+                    <div class="card-body">
+                        @for (int i = 0; i < Model.Count; i++)
+                        {
+                            <div class="form-check m-1">
+                                <input type="hidden" asp-for="@Model[i].RoleId" />
+                                <input type="hidden" asp-for="@Model[i].RoleName" />
 
-<form method="post">
-    <div class="card">
-        <div class="card-header">
-            <h3>User: @ViewBag.UserName </h3>
-        </div>
-        <div class="card-header">
-            <h4>Manage Roles</h4>
-        </div>
-        <div class="card-body">
-            @for (int i = 0; i < Model.Count; i++)
-            {
-                <div class="form-check m-1">
-                    <input type="hidden" asp-for="@Model[i].RoleId" />
-                    <input type="hidden" asp-for="@Model[i].RoleName" />
-
-                    <input asp-for="@Model[i].IsSelected" class="form-check-input" />
-                    <label class="form-check-label" asp-for="@Model[i].IsSelected">
-                        @Model[i].RoleName - @Model[i].Description
-                    </label>
+                                <input asp-for="@Model[i].IsSelected" class="form-check-input" />
+                                <label class="form-check-label" asp-for="@Model[i].IsSelected">
+                                    @Model[i].RoleName - @Model[i].Description
+                                </label>
+                            </div>
+                        }
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                    </div>
+                    <div class="card-footer">
+                        <input type="submit" value="Update" class="btn btn-primary"
+                               style="width:auto" />
+                        <a asp-action="EditUser" asp-route-UserId="@UserId"
+                           class="btn btn-primary" style="width:auto">Cancel</a>
+                    </div>
                 </div>
-            }
-            <div asp-validation-summary="All" class="text-danger"></div>
-        </div>
-        <div class="card-footer">
-            <input type="submit" value="Update" class="btn btn-primary"
-                   style="width:auto" />
-            <a asp-action="EditUser" asp-route-UserId="@UserId"
-               class="btn btn-primary" style="width:auto">Cancel</a>
-        </div>
+            </form>
+        </main>
     </div>
-</form>
+</div>
