--- a/Web/Views/Shared/ConfirmationEmailSent.cshtml
+++ b/Web/Views/Shared/ConfirmationEmailSent.cshtml
@@ -2,27 +2,22 @@
     ViewData["Title"] = "Confirmation Email Sent";
 }
 
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-8 offset-md-2">
-            <div class="card shadow">
-                <div class="card-header">
-                    <h2 class="card-title mb-0">Confirmation Email Sent</h2>
-                </div>
-                <div class="card-body">
-                    <p>
-                        If an account exists with the email address you provided,
-                        a confirmation link has been sent to that inbox.
-                        Please check your spam folder if you do not see it within
-                        a few minutes or <a asp-action="ResendConfirmationEmail" asp-controller="Account">click here</a> to resend the confirmation email.
-                    </p>
-                    <p>
-                        If you have any questions or need further assistance,
-                        feel free to
-                        <a href="@Url.Action("Contact", "Home")">contact our support team</a>.
-                    </p>
-                </div>
-            </div>
+<div class="container mx-auto mt-10 px-4">
+    <div class="max-w-xl mx-auto bg-white p-8 rounded-lg shadow-lg">
+        <div class="text-left">
+            <h2 class="text-2xl font-semibold text-gray-800 mb-4">Confirmation Email Sent</h2>
+            <p class="text-gray-600 mb-6">
+                If an account exists with the email address you provided, a confirmation link has been sent to that inbox.
+            </p>
+            <p class="text-gray-600 mb-6">
+                Please check your spam folder if you do not see it within a few minutes, or
+                <a asp-controller="Account" asp-action="ResendConfirmationEmail"
+                   class="text-blue-500 hover:underline">click here</a> to resend the confirmation email.
+            </p>
+            <p class="text-gray-600">
+                If you have any questions or need further assistance, feel free to
+                <a asp-controller="Home" asp-action="Contact"  class="text-blue-500 hover:underline">contact our support team</a>.
+            </p>
         </div>
     </div>
 </div>
