--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -30,12 +30,11 @@
                     <div class="flex lg:justify-end items-center gap-x-4 ml-auto">
                         <!-- Search -->
                         <div class="relative">
-                            <input type="text" placeholder="Search" class="px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-600 w-60 p-lg-4 text-left">
-                            <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-500">
+                            <input type="text" placeholder="Search" class="px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-600 w-60 pr-10 text-left"> <!-- Thêm pr-10 để tạo khoảng cách cho biểu tượng -->
+                            <span class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500">
                                 <i class="fas fa-search"></i>
                             </span>
                         </div>
-
                         <!-- Icon Shopping -->
                         <a asp-controller="Cart" asp-action="GetAllById" class="text-gray-500 hover:text-gray-900">
                             <i class="fas fa-shopping-cart"></i>
@@ -46,7 +45,7 @@
                         <i class="fas fa-bars text-2xl size-6"></i>
                     </button>
                 </div>
-                <div class="hidden lg:flex lg:gap-x-12 justify-center w-55/100 mx-auto">
+                <div class="hidden lg:flex lg:gap-x-12 justify-center w-auto mx-auto">
                     <ul class="flex space-x-10 text-gray-700">
                         <li><a class="hover:text-gray-900 text-xl font-medium">Women</a></li>
                         <li><a class="hover:text-gray-900 text-xl font-medium">Men</a></li>
@@ -54,18 +53,18 @@
                         <li><a class="hover:text-gray-900 text-xl font-medium">Stores</a></li>
                     </ul>
                 </div>
-                <div class="hidden lg:flex lg:justify-between items-center lg:gap-x-4 pl-0 w-3/10">
+                <div class="hidden lg:flex lg:justify-between items-center lg:gap-x-4 pl-0 w-1/2">
                     <div class="flex items-center gap-x-4 w-full">
                         <!-- Search -->
-                        <div class="relative w-40 ml-0 flex-grow">
-                            <input type="text" placeholder="Search" class="px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-600 w-full text-left pl-0">
-                            <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-500">
+                        <div class="relative w-1/6 ml-0 flex-grow">
+                            <input type="text" placeholder="Search" class="px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-600 w-full text-left pr-10"> <!-- Thêm pr-10 để tạo khoảng cách bên phải cho biểu tượng -->
+                            <span class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500">
                                 <i class="fas fa-search"></i>
                             </span>
                         </div>
 
                         <!-- Icon Shopping-->
-                        <div class="flex justify-center items-center w-10">
+                        <div class="flex justify-center items-center w-10 pl-8">
                             <a href="#" class="text-gray-500 hover:text-gray-900">
                                 <i class="fas fa-shopping-cart"></i>
                             </a>
@@ -73,10 +72,14 @@
                     </div>
                     @if (User.Identity.IsAuthenticated)
                     {
+                        <div class="flex justify-center w-full">
+                            <span class="text-gray-500 hover:text-gray-900 font-medium w-auto truncate">Hello @User.Identity.Name</span>
+                        </div>
+
                         <!-- Logout button -->
                         <form asp-action="Logout" asp-controller="Account" method="post">
-                            @Html.AntiForgeryToken() <!-- CSRF Token -->
-                            <button type="submit" class="text-gray-500 hover:text-gray-900 font-medium w-32">Log Out</button>
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="text-gray-500 hover:text-gray-900 font-medium w-16 ">Log Out</button>
                         </form>
                     }
                     else
@@ -86,8 +89,6 @@
                         <a asp-action="Register" asp-controller="Account" class="text-gray-500 hover:text-gray-900 font-medium w-32">Sign Up</a>
                     }
                 </div>
-
-
             </nav>
 
             <!-- Mobile Menu -->
@@ -217,7 +218,7 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-controller="Product" asp-action="Create"
+                        <a asp-controller="Product" asp-action="GetAllProduct"
                            class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                             <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
                                  aria-hidden="true"
@@ -231,7 +232,7 @@
                     </li>
                     <li>
                         <form asp-controller="Account" asp-action="Logout" method="post" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                            @Html.AntiForgeryToken() <!-- CSRF Token để bảo vệ khỏi tấn công CSRF -->
+                            @Html.AntiForgeryToken()
                             <button type="submit" class="flex items-center">
                                 <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
                                      aria-hidden="true"
