--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -148,7 +148,7 @@
             </div>
         </header>
     }
-    else
+    else 
     {
         <!-- Mobile nav toggle -->
         <button data-drawer-target="default-sidebar"
@@ -354,7 +354,7 @@
     }
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
-    <script src="~/js/javascript.js"></script>
+    <script src="~/js/Category.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
